[package]
name = "path2regex"
version = "0.0.3"
edition = "2021"
rust-version = "1.60"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Binbiubiubiu <2632003786@qq.com>"]
documentation = "https://docs.rs/path2regex"
repository = "https://github.com/Binbiubiubiu/path2regex"
keywords = ["express", "regexp", "route", "routing"]
categories = ["text-processing"]
description = "Express style path to RegExp utility"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["compile", "match"]
compile = ["dep:serde_json"]
match = ["dep:serde_json"]

[dependencies]
anyhow = "1.0.66"
regex = "1.7.0"
serde_json = { version = "1.0.87", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
urlencoding = "2.1.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
